# bishop

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README.txt  golden.b  main.cpp
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
codegen/: codegen.cpp  codegen.hpp  cpp_builder.cpp  cpp_builder.hpp  emit_assert.cpp  emit_binary.cpp  emit_channel.cpp  emit_char.cpp  emit_deque.cpp  emit_error.cpp  emit_expression.cpp  emit_fail.cpp  emit_ffi.cpp  emit_field.cpp  emit_function.cpp  emit_function_call.cpp  emit_go_spawn.cpp  emit_lambda.cpp  emit_list.cpp  emit_literals.cpp  emit_map.cpp  emit_method_call.cpp  emit_name.cpp  emit_or.cpp  emit_pair.cpp  emit_priority_queue.cpp  emit_queue.cpp  emit_refs.cpp  emit_set.cpp  emit_stack.cpp  emit_statement.cpp  emit_string.cpp  emit_struct.cpp  emit_tuple.cpp  emit_type.cpp  emit_variable.cpp  emit_with.cpp  template_render.cpp  template_render.hpp
common/: type_utils.hpp
docker/: Dockerfile  entrypoint.sh
docs/: POINTERS_FFI_HANDLES.md  index.html
examples/: echo_client.b  resolve.b  serve.b  serve.n
helix/: .gitignore  INSTALL.md  grammar.js  languages.toml  package.json  tree-sitter-bishop.wasm  tree-sitter.json
include/: ast.hpp  codegen.hpp  lexer.hpp  parser.hpp  project.hpp  token.hpp
lexer/: lexer.cpp  lexer.hpp  token.hpp
parser/: ast.hpp  parse_additive.cpp  parse_comparison.cpp  parse_expression.cpp  parse_fail.cpp  parse_ffi.cpp  parse_function.cpp  parse_if.cpp  parse_import.cpp  parse_or.cpp  parse_postfix.cpp  parse_primary.cpp  parse_return.cpp  parse_statement.cpp  parse_struct.cpp  parse_type.cpp  parse_variable.cpp  parse_while.cpp  parser.cpp  parser.hpp
project/: module.cpp  module.hpp
runtime/: asio_impl.cpp  expressions.hpp  functions.hpp  io.hpp  literals.hpp  runtime.hpp  statements.hpp  types.hpp
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp
stdlib/: algo.cpp  algo.hpp  crypto.cpp  crypto.hpp  fs.cpp  fs.hpp  http.cpp  http.hpp  json.cpp  json.hpp  log.cpp  log.hpp  markdown.cpp  markdown.hpp  math.cpp  math.hpp  net.cpp  net.hpp  process.cpp  process.hpp  random.cpp  random.hpp  regex.cpp  regex.hpp  sync.cpp  sync.hpp  time.cpp  time.hpp  yaml.cpp  yaml.hpp
tests/: debug_yaml.b  simple_yaml.b  test_algo.b  test_assert.cpp  test_assertions.b  test_async.b  test_async.n  test_bare_error_fail.b  test_braceless_if.b  test_channels.n  test_char_methods.b  test_const.b  test_control_flow.n  test_crypto.b  test_default_string.b  test_deque.b  test_docgen.n  test_error_basic.b  test_error_cause_chain.b  test_error_handling.b  test_fallible_instance_method.b  test_ffi.b  test_free_function_from_method.b  test_fs.b  test_fs_simple.b  test_hello_world.cpp  test_json.b  test_lambdas.b  test_list_join.b  test_lists.b  test_log.b  test_maps.b  test_markdown.b  test_math.b  test_modules.b  test_nested_generics.b  test_net.b  test_optionals.n  test_or_continue.b  test_or_falsy.b  (+30 more)
tools/: docgen.cpp
(+149 files in other folders)
